--- a/Product_Clothes/WindowsFormsApp2/Properties/Settings.settings
+++ b/Product_Clothes/WindowsFormsApp2/Properties/Settings.settings
@@ -10,5 +10,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=DESKTOP-40QVERS;Initial Catalog=DB_accounting_material_financial_assets;User ID=sa;Password=2004</Value>
     </Setting>
+    <Setting Name="DB_accounting_material_financial_assetsConnectionString1" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;ConnectionString&gt;Data Source=DESKTOP-40QVERS;Initial Catalog=DB_accounting_material_financial_assets;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=DESKTOP-40QVERS;Initial Catalog=DB_accounting_material_financial_assets;Integrated Security=True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
