--- a/Product_Clothes/WindowsFormsApp2/WindowsFormsApp2.csproj
+++ b/Product_Clothes/WindowsFormsApp2/WindowsFormsApp2.csproj
@@ -133,6 +133,12 @@
     <Compile Include="Purchase.Designer.cs">
       <DependentUpon>Purchase.cs</DependentUpon>
     </Compile>
+    <Compile Include="purchaseViewer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="purchaseViewer.Designer.cs">
+      <DependentUpon>purchaseViewer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Purchase_Raw_Material.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -194,12 +200,16 @@
     <EmbeddedResource Include="Purchase.resx">
       <DependentUpon>Purchase.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="purchaseViewer.resx">
+      <DependentUpon>purchaseViewer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Purchase_Raw_Material.resx">
       <DependentUpon>Purchase_Raw_Material.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Raw_Material.resx">
       <DependentUpon>Raw_Material.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ReportPuchase.rdlc" />
     <EmbeddedResource Include="Unit_Of_Measurements.resx">
       <DependentUpon>Unit_Of_Measurements.cs</DependentUpon>
     </EmbeddedResource>
