--- a/Product_Clothes/WindowsFormsApp2/WindowsFormsApp2.csproj
+++ b/Product_Clothes/WindowsFormsApp2/WindowsFormsApp2.csproj
@@ -119,6 +119,12 @@
     <Compile Include="IngredientUpdate.Designer.cs">
       <DependentUpon>IngredientUpdate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Production.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Production.Designer.cs">
+      <DependentUpon>Production.cs</DependentUpon>
+    </Compile>
     <Compile Include="Product_Manufacturing.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -150,6 +156,12 @@
     </Compile>
     <Compile Include="Raw_Material.Designer.cs">
       <DependentUpon>Raw_Material.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Sale.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Sale.Designer.cs">
+      <DependentUpon>Sale.cs</DependentUpon>
     </Compile>
     <Compile Include="Sales_Of_Product.cs">
       <SubType>Form</SubType>
@@ -188,6 +200,9 @@
     <EmbeddedResource Include="IngredientUpdate.resx">
       <DependentUpon>IngredientUpdate.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Production.resx">
+      <DependentUpon>Production.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -210,6 +225,9 @@
       <DependentUpon>Raw_Material.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ReportPuchase.rdlc" />
+    <EmbeddedResource Include="Sale.resx">
+      <DependentUpon>Sale.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Unit_Of_Measurements.resx">
       <DependentUpon>Unit_Of_Measurements.cs</DependentUpon>
     </EmbeddedResource>
