--- a/Product_Clothes/WindowsFormsApp2/WindowsFormsApp2.csproj
+++ b/Product_Clothes/WindowsFormsApp2/WindowsFormsApp2.csproj
@@ -175,6 +175,12 @@
     <Compile Include="Sales_Of_Product.Designer.cs">
       <DependentUpon>Sales_Of_Product.cs</DependentUpon>
     </Compile>
+    <Compile Include="SaleViewer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SaleViewer.Designer.cs">
+      <DependentUpon>SaleViewer.cs</DependentUpon>
+    </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
     <Compile Include="Unit_Of_Measurements.cs">
       <SubType>Form</SubType>
@@ -235,8 +241,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ReportProduction.rdlc" />
     <EmbeddedResource Include="ReportPuchase.rdlc" />
+    <EmbeddedResource Include="ReportSale.rdlc" />
     <EmbeddedResource Include="Sale.resx">
       <DependentUpon>Sale.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SaleViewer.resx">
+      <DependentUpon>SaleViewer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Unit_Of_Measurements.resx">
       <DependentUpon>Unit_Of_Measurements.cs</DependentUpon>
